2008-08-30 Ingo Renner  <ingo@typo3.org>

	* added dynamic Access Control System
	* added an access manager
	* added a table to store friend connection (user to user to role)
	* added two new fields and resource, to the ACL rule table
	* !!! changed the community application widget interface
	* !!! moved the getRequestedUser() method to the abstract community application
	* added a getRequestingUser() method to the abstract community application
	* fixed a small bug that caused a warning in the application manager when saving the BE plugin flexform without having selected an application
	* added skeleton for the user profile basic information widget
	* added skeleton for the user profile contact information widget
	* added skeleton for the privacy management application
	* completed the user account model
	* added a user profile actions widget
	* added a "Add as Friend" profile action to the user profile actions widget

2008-08-29 Ingo Renner  <ingo@typo3.org>

	* added initial structure for the ACL tables

2008-08-28 Ingo Renner  <ingo@typo3.org>

	* added user profile personal information widget
	* added personal information template
	* !!! moved and renamed exceptions to make them fit naming conventions
	* added the templating engine
	* fixed templating view helpers, naming and minor issues
	* added an interface for views
	* added personal information properties to the user model and user gateway
	* added TS configuration for the personal information widget

2008-08-27 Ingo Renner  <ingo@typo3.org>

	* removed includes of Zend role registry exception class
	* added resource interface implementation for user and group models
	* fixed some whitespace

2008-08-23 Ingo Renner  <ingo@typo3.org>

	* added initial ACL framework, ported from Zend Framework

2008-08-21 Ingo Renner  <ingo@typo3.org>

	* added initial application/widget resolving and execution to the central application controller
	* added initial user profile image widget