@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the privacy application</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="privacy.editSettings">Edit Privacy Settings</label>
+			<label index="privacy.userProfile.read">Decide who can see your profile page.</label>
+			<label index="privacy.userProfile.imageWidget.read">Decide who can see your profile image.</label>
+			<label index="privacy.userProfile.imageWidget.addComment">Decide who can add comments to your profile image.</label>
+			<label index="privacy.userProfile.personalInformationWidget.read">Decide who can see your personal information.</label>
+		</languageKey>
+	</data>
+</T3locallang>
