@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the privacy application</title>
+</head>
+<body>
+
+<!-- ###PRIVACY_SETTINGS### begin -->
+
+<h2>###LLL:privacy.editSettings###</h2>
+
+<ul>
+	<!-- ###SETTING_GROUPS### begin -->
+	<li>
+		<span class="settingGroup-name">###SETTING_GROUP.NAME###</span>
+		<ul>
+			<!-- ###SETTINGS### begin -->
+			<li>
+				<span class="setting-description">######SETTING.DESCRIPTION######</span>
+				<ul>
+					<!-- ###SETTING_OPTIONS### begin -->
+					<!-- ###LOOP:SETTING_OPTIONS### begin -->
+					<!-- ###LOOP_CONTENT### -->
+					<li>
+						<input type="hidden" name="###SETTING_OPTION.FIELD_NAME###" value="0" />
+						<input type="checkbox" name="###SETTING_OPTION.FIELD_NAME###" id="###SETTING_OPTION.FIELD_ID###" ###SETTING_OPTION.FIELD_CHECKED### value="1" /> <label for="###SETTING_OPTION.FIELD_ID###">###SETTING_OPTION.LABEL###</label>
+					</li>
+					<!-- ###LOOP_CONTENT### -->
+					<!-- ###LOOP:SETTING_OPTIONS### end -->
+					<!-- ###SETTING_OPTIONS### end -->
+				</ul>
+			</li>
+			<!-- ###SETTINGS### end -->
+		</ul>
+	</li>
+	<!-- ###SETTING_GROUPS### end -->
+</ul>
+
+<!-- ###PRIVACY_SETTINGS### end -->
+
+</body>
+</html>
