@@ -1,3 +1,9 @@
+2008-08-31 Ingo Renner  <ingo@typo3.org>
+
+	* added the privacy settings view to the privacy application
+	* added a method to the LLL view helper so that it can resolve full paths of labels, starting with EXT:...
+	* added a column to the ACL roles table to mark a role as publicly visible
+
 2008-08-30 Ingo Renner  <ingo@typo3.org>
 
 	* added dynamic Access Control System
